--- a/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
+++ b/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
@@ -24,22 +24,22 @@ jobs:
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v1.1.3
 
-      # - name: MSBuild - Precompile - Visual Studio Solution
-      #   shell: cmd
-      #   run: | 
-      #     msbuild carrotcake.sln /t:Rebuild /tv:4.0 ^
-      #     /p:OutputPath=bin /p:DeployOnBuild=true /p:WebPublishMethod=FileSystem ^
-      #     /p:PrecompileBeforePublish=true /p:EnableUpdateable=false /p:DebugSymbols=true ^
-      #     /p:UseMerge=false /p:DeleteAppCodeCompiledFiles=True /p:DeleteExistingFiles=True ^
-      #     /p:WDPMergeOption=CreateSeparateAssembly /p:UseFixedNames=true
-
-      - name: MSBuild - Precompile - Visual Studio Project
+      - name: MSBuild - Precompile - Visual Studio Solution
         shell: cmd
         run: | 
-          msbuild carrotcake.csproj /p:OutputPath=bin /p:DeployOnBuild=true ^
-          /p:PublishProvider="FileSystem" /p:PrecompileBeforePublish=true /p:EnableUpdateable=false ^
-          /p:DebugSymbols=true /p:WDPMergeOption="CreateSeparateAssembly" ^
-          /p:UseFixedNames=true /p:RestorePackagesConfig=true
+          msbuild carrotcake.sln /t:Rebuild /tv:14.0 ^
+          /p:OutputPath=bin /p:DeployOnBuild=true /p:WebPublishMethod=FileSystem ^
+          /p:PrecompileBeforePublish=true /p:EnableUpdateable=false /p:DebugSymbols=true ^
+          /p:UseMerge=false /p:DeleteAppCodeCompiledFiles=True /p:DeleteExistingFiles=True ^
+          /p:WDPMergeOption=CreateSeparateAssembly /p:UseFixedNames=true
+
+      # - name: MSBuild - Precompile - Visual Studio Project
+      #   shell: cmd
+      #   run: | 
+      #     msbuild carrotcake.csproj /p:OutputPath=bin /p:DeployOnBuild=true ^
+      #     /p:PublishProvider="FileSystem" /p:PrecompileBeforePublish=true /p:EnableUpdateable=false ^
+      #     /p:DebugSymbols=true /p:WDPMergeOption="CreateSeparateAssembly" ^
+      #     /p:UseFixedNames=true /p:RestorePackagesConfig=true
 
       - run: get-childitem -recurse -force -path .
         shell: powershell
