--- a/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
+++ b/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
@@ -8,18 +8,16 @@ on: workflow_dispatch
 
 jobs:
   build:
+    name: Build
+    uses: ./.github/workflows/veracode-package-build.yml
+    secrets: inherit
+    
+  build:
     runs-on: windows-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
-
-
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v5
-        with:
-          dotnet-version: 8.0.x
-          cache: false
 
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v1.1.3
@@ -32,26 +30,6 @@ jobs:
           /p:PrecompileBeforePublish=true /p:EnableUpdateable=false /p:DebugSymbols=true ^
           /p:UseMerge=false /p:DeleteAppCodeCompiledFiles=True /p:DeleteExistingFiles=True ^
           /p:WDPMergeOption=CreateSeparateAssembly /p:UseFixedNames=true
-
-      # - name: MSBuild - Precompile - Visual Studio Solution
-      #   shell: cmd
-      #   run: | 
-      #     msbuild CarrotwareCMS.sln /t:Rebuild ^
-      #     /p:OutputPath=bin /p:DeployOnBuild=true /p:WebPublishMethod=FileSystem ^
-      #     /p:PrecompileBeforePublish=true /p:EnableUpdateable=false /p:DebugSymbols=true ^
-      #     /p:UseMerge=false /p:DeleteAppCodeCompiledFiles=True /p:DeleteExistingFiles=True ^
-      #     /p:WDPMergeOption=CreateSeparateAssembly /p:UseFixedNames=true
-
-      # - name: MSBuild - Precompile - Visual Studio Project
-      #   shell: cmd
-      #   run: | 
-      #     msbuild carrotcake.csproj /p:OutputPath=bin /p:DeployOnBuild=true ^
-      #     /p:PublishProvider="FileSystem" /p:PrecompileBeforePublish=true /p:EnableUpdateable=false ^
-      #     /p:DebugSymbols=true /p:WDPMergeOption="CreateSeparateAssembly" ^
-      #     /p:UseFixedNames=true /p:RestorePackagesConfig=true
-
-      - run: get-childitem -recurse -force -path .
-        shell: powershell
 
       # - name: Upload build artifacts
       #   if: success()
