--- a/.github/workflows/veracode-package-build.yml
+++ b/.github/workflows/veracode-package-build.yml
@@ -1,6 +1,18 @@
 name: Veracode Build
 on:
   workflow_call:
+    inputs:
+      artifact_name:
+        required: false
+        type: string
+      artifact_path:
+        required: false
+        type: string
+  workflow_dispatch:
+
+env:
+  ARTIFACT_NAME: ${{ inputs.artifact_name || 'veracode-artifact' }}
+  ARTIFACT_PATH: ${{ inputs.artifact_path || 'veracode_artifact_directory' }}
 
 jobs:
   build:
@@ -25,10 +37,10 @@ jobs:
       - run: |
           (Get-ChildItem -Path ${{ github.workspace }} -Recurse -Include "*.zip" | 
           Where-Object -Property FullName -Like '*\app.publish\*') |
-          % {Copy-Item -Path $_.FullName -Destination "${{ github.workspace }}\veracode_artifact_directory" -Force}
+          % {Copy-Item -Path $_.FullName -Destination "${{ github.workspace }}\${{ env.ARTIFACT_PATH }}" -Force}
         shell: powershell
 
       - uses: actions/upload-artifact@v4
         with:
-          name: veracode-artifact
-          path: veracode_artifact_directory
+          name: ${{ env.ARTIFACT_NAME }}
+          path: ${{ env.ARTIFACT_PATH }}
