update build step

--- a/.github/workflows/veracode-package-build.yml
+++ b/.github/workflows/veracode-package-build.yml
@@ -44,3 +44,4 @@ jobs:
         with:
           name: ${{ env.ARTIFACT_NAME }}
           path: ${{ env.ARTIFACT_PATH }}
+          if-no-files-found: error
