--- a/.github/workflows/veracode-package-build.yml
+++ b/.github/workflows/veracode-package-build.yml
@@ -35,13 +35,15 @@ jobs:
           /p:WDPMergeOption=CreateSeparateAssembly /p:UseFixedNames=true
 
       - run: |
-          (Get-ChildItem -Path ${{ github.workspace }} -Recurse -Include "*.zip" | 
-          Where-Object -Property FullName -Like '*\app.publish\*') |
-          % {Copy-Item -Path $_.FullName -Destination "${{ github.workspace }}\${{ env.ARTIFACT_PATH }}" -Force}
+          (Get-ChildItem -Path ${{ github.workspace }} -Recurse -Include "*.zip" | Where-Object -Property FullName -Like '*\app.publish\*') | % {Copy-Item -Path $_.FullName -Destination "${{ github.workspace }}\${{ env.ARTIFACT_PATH }}" -Force}
+        shell: powershell
+
+      - run: |
+          Get-ChildItem -Path "${{ github.workspace }}\${{ env.ARTIFACT_PATH }}"
         shell: powershell
 
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ env.ARTIFACT_NAME }}
-          path: ${{ env.ARTIFACT_PATH }}
+          path: ${{ env.ARTIFACT_PATH }}\**
           if-no-files-found: error
