--- a/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
+++ b/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
@@ -85,7 +85,7 @@ jobs:
         uses: veracode/veracode-pipeline-scan-results-to-sarif@master
         with:
           pipeline-results-json: ${{ strategy.job-index }}-filtered_results.json
-          source-base-path-1: "^a/carrotcakecms/carrotcakecms/:"
+          source-base-path-1: "^a/carrotcakecms/carrotcakecms/:./"
           output-results-sarif: veracode-results.sarif
           ref: ${{ github.ref }}
           commitSHA: ${{ github.sha }}
