--- a/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
+++ b/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
@@ -82,6 +82,7 @@ jobs:
       - run: |
           Get-ChildItem -Force -Recurse
         shell: powershell
+        if: always()
 
       - name: Convert pipeline scan output to SARIF format
         if: always()
