--- a/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
+++ b/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
@@ -88,10 +88,10 @@ jobs:
       - name: Convert pipeline scan output to SARIF format
         if: always()
         # create code scanning alerts
-        uses: veracode/veracode-pipeline-scan-results-to-sarif@autoRewritePath
+        uses: veracode/veracode-pipeline-scan-results-to-sarif@v2.0.3
         with:
           pipeline-results-json: ${{ strategy.job-index }}-filtered_results.json
-          # source-base-path-1: "a/carrotcakecms/carrotcakecms/:/"
+          source-base-path-1: "a/carrotcakecms/carrotcakecms/:./"
           output-results-sarif: veracode-results.sarif
           ref: ${{ github.ref }}
           commitSHA: ${{ github.sha }}
