change shell for linux

--- a/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
+++ b/.github/workflows/veracode-pipeline-scan-and-sarif-manual.yml
@@ -81,9 +81,8 @@ jobs:
 
       - name: List Items
         if: always()
-        shell: powershell
         run: |
-          Get-ChildItem -Path . -Force -Recurse
+          ls -alR
 
       - name: Convert pipeline scan output to SARIF format
         if: always()
